--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "start": "node tools/build.js --watch",
     "deploy": "node tools/deploy.js"
   },
-  "dependencies": {},
   "peerDependencies": {
     "jquery": "1.9.1 - 3",
     "popper.js": "^1.12.9"
@@ -38,13 +37,13 @@
     "fs-extra": "^5.0.0",
     "globby": "^7.1.1",
     "mime-types": "^2.1.17",
-    "node-sass": "^9.0.0",
     "ora": "^1.3.0",
     "postcss": "^8.4.47",
     "postcss-cli": "^11.0.0",
     "postcss-flexbugs-fixes": "^5.0.2",
+    "sass": "^1.79.0",
     "shelljs": "^0.8.5",
-    "yargs": "^10.1.1"
+    "yargs": "^17.7.2"
   },
   "files": [
     "dist/",
